--- a/themes/hugo-theme-novela/assets/scss/article.scss
+++ b/themes/hugo-theme-novela/assets/scss/article.scss
@@ -146,9 +146,11 @@
       0 18px 36px -18px rgba(0, 0, 0, 0.22);
             box-shadow: 0 30px 60px -10px rgba(0, 0, 0, 0.2),
       0 18px 36px -18px rgba(0, 0, 0, 0.22);
+    text-align: center;
 
     img{
-        width: 100%;
+        max-width: 100%;
+        max-height: 425px;
     }
 
     /*DESKTOP MEDIUM*/
