--- a/themes/hugo-theme-novela/layouts/post/single.html
+++ b/themes/hugo-theme-novela/layouts/post/single.html
@@ -4,7 +4,7 @@
 
     {{ partial "article/hero.html" . }}
 
-    {{ partial "article/progress" . }}
+    {{ partial "article/progress.html" . }}
 
     <article  id="articleContent" class="post-content" style="position:relative;">
         {{ .Content }}
