--- a/themes/hugo-theme-novela/assets/scss/global.scss
+++ b/themes/hugo-theme-novela/assets/scss/global.scss
@@ -11,7 +11,7 @@
 @import "navigation.scss";
 @import "paragraph.scss";
 @import "progress.scss";
-@import "social-links.scss";
+@import "external-links.scss";
 @import "subscription.scss";
 @import "tables.scss";
 @import "section.scss";
