--- a/themes/hugo-theme-novela/layouts/partials/author/hero.html
+++ b/themes/hugo-theme-novela/layouts/partials/author/hero.html
@@ -8,7 +8,7 @@
         <h1 class="author-heading">{{ .Title }}</h1>
         <p class="author-subheading">{{ .Params.bio }}</p>
         <div class="author-social">
-            {{ partial "author/social_links.html" . }}
+            {{ partial "author/external_links.html" . }}
         </div>
     </div>
 </section>
