--- a/themes/hugo-theme-novela/assets/scss/vars.scss
+++ b/themes/hugo-theme-novela/assets/scss/vars.scss
@@ -42,7 +42,7 @@ body{
     --dark-accent: #E9DAAC;
     --dark-background: #111216;
     --dark-hover: rgba(255, 255, 255, 0.07);
-    --dark-gradient: linear-gradient(180deg, #111216 0%, rgba(66, 81, 98, 0.36) 100%);
+    --dark-gradient: #73737D;
     --dark-articleText: #fff;
     --dark-track: rgba(255, 255, 255, 0.3);
     --dark-progress: #fff;
