--- a/themes/hugo-theme-novela/layouts/partials/header.html
+++ b/themes/hugo-theme-novela/layouts/partials/header.html
@@ -1,7 +1,9 @@
 <Section class="section">
   <div class="nav-container">
     <a class="logo-link" href="/">
-      {{ partial "icons/ui/logo.html" . }}
+      <div id="site-logo">
+        {{ partial "icons/ui/logo.html" . }}
+      </div>
       <span class="header-hidden">Navigate back to the homepage</span>
     </a>
     <div class="nav-controls">
